tests/field/get_on_fn.rev
fn foo() {}

foo.bar // error: only structure instances have properties